--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,15 +26,43 @@ code {
   gap: 1px
 }
 
-.FormulaBlock {
+.FormulaDisplayBlock {
   background-color: aquamarine;
   padding: 20px;
   margin: 20px;
   border-radius: 30px;
 }
 
-.FormulaBlock h4 {
+.FormulaDisplayBlock h4 {
   margin: 0 0 10px 0;
-  font-size: 2em;
+  font-size: 1em;
   color: var(--primary);
+}
+
+.FormulaDisplayBlock span {
+  cursor: pointer;
+  background: #f1f1f1;
+  border-radius: 50%;
+  padding: 5px;
+  color: #333;
+}
+
+.FormulaPageBlock span {
+  cursor: pointer;
+  background: #f1f1f1;
+  border-radius: 50%;
+  padding: 5px;
+  color: #333;
+}
+
+.mathjax {
+  float: center;
+  margin-top: 20px;
+}
+
+
+.FormulasList {
+  max-height: 500px;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
