I forgot to send updates the other night, I fixed a few things

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -123,3 +123,15 @@ code {
     font-size: 10pt;
   }
 }
+
+.logo{
+  text-decoration:none;
+}
+
+.bannerAd{
+  width: 100%;
+  outline: solid;
+  outline-color: #333;
+  outline-width: 2px;
+  border-radius: 25px;
+}
